tests/fixtures/LatestTests/ObjectTests/errors/member_access_non_object.fg
/; EXPECT_ERROR: MemberAccessOnNonObjectVariable
var x: int = 10
var y = x.field

